--- a/src/components/Advertisements/style.scss
+++ b/src/components/Advertisements/style.scss
@@ -1,12 +1,21 @@
-.carousel-demo .product-item .product-item-content {
-    border: 1px solid var(--surface-d);
-    border-radius: 3px;
-    margin: .3rem;
-    text-align: center;
-    padding: 2rem 0;
-}
+.advertisements_buttons {
+  background: #627484;
+  height: 45px;
+  margin-bottom: 20px;
 
-.carousel-demo .product-item .product-image {
-    width: 50%;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  button {
+    float: right;
+    margin: 6px 20px 6px 0px !important;
+    color: #383838 !important;
+    font-weight: bold;
+    background-color: #f2f2f2 !important;
+    border: none !important;
+  }
+  .p-button:enabled:focus{
+    box-shadow: none !important;
+  }
+}
+.slick-slide img{
+  width: 80%;
+  height: 550px !important;
 }
