--- a/src/layout/sass/_menu.scss
+++ b/src/layout/sass/_menu.scss
@@ -4,11 +4,12 @@
 .title-main{
     height: 50px;
     display: flex;
-    justify-content: space-around;
     align-items: center;
-    font-size: 13px;
+    font-size: 14px;
     font-weight: bold;
-    color: #ffffffbf;
+    margin-left: 20px;
+
+    color: #f6f6f6;
 }
 .layout-menu {
     list-style-type: none;
